feat(security): update CORS configuration to specify allowed origins